packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_once__as_root_node.snap
---
source: tests/vapor/v_once.rs
expression: code
---
import { setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _setProp(n0, "id", foo);
  return n0;
})();
